src/morea.scss
@font-face {
	font-family: 'font';
	src: url('../dist/fonts/font.eot?22347261');
	src: url('../dist/fonts/font.eot?22347261#iefix') format('embedded-opentype'),
	url('../dist/fonts/font.woff?22347261') format('woff'),
	url('../dist/fonts/font.ttf?22347261') format('truetype'),
	url('../dist/fonts/font.svg?22347261#font') format('svg');
	font-weight: normal;
	font-style: normal;
}

$greek-font: Cambria, Serif;
$main-font: "Myriad Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif; 
$bookmark-color: #5E74A5;

.morea {

	font-family: $main-font;
	line-height: 36px;

	.animate-spin {
		-moz-animation: spin 2s infinite linear;
		-o-animation: spin 2s infinite linear;
		-webkit-animation: spin 2s infinite linear;
		animation: spin 2s infinite linear;
		display: inline-block;
	}
	@-moz-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-o-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(359deg);
			-o-transform: rotate(359deg);
			-webkit-transform: rotate(359deg);
			transform: rotate(359deg);
		}
	}

	@-webkit-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-o-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(359deg);
			-o-transform: rotate(359deg);
			-webkit-transform: rotate(359deg);
			transform: rotate(359deg);
		}
	}
	@-o-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-o-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(359deg);
			-o-transform: rotate(359deg);
			-webkit-transform: rotate(359deg);
			transform: rotate(359deg);
		}
	}
	@-ms-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-o-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(359deg);
			-o-transform: rotate(359deg);
			-webkit-transform: rotate(359deg);
			transform: rotate(359deg);
		}
	}
	@keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-o-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(359deg);
			-o-transform: rotate(359deg);
			-webkit-transform: rotate(359deg);
			transform: rotate(359deg);
		}
	}


	[class^="icon-"]:before, [class*=" icon-"]:before {
		font-family: "font";
		font-style: normal;
		font-weight: normal;
		speak: none;

		display: inline-block;
		text-decoration: inherit;
		width: 1em;
		margin-right: .2em;
		text-align: center;
		font-variant: normal;
		text-transform: none;

		line-height: 1em;
		margin-left: .2em;

	}

	.icon-link:before { content: '\e800'; } /* '' */
	.icon-resize-small-alt:before { content: '\e802'; } /* '' */
	.icon-resize-horizontal:before { content: '\e803'; } /* '' */
	.icon-pencil:before { content: '\e805'; } /* '' */
	.icon-flow-merge:before { content: '\e806'; } /* '' */
	.icon-flow-cross:before { content: '\e807'; } /* '' */
	.icon-flow-split:before { content: '\e808'; } /* '' */
	.icon-flow-parallel:before { content: '\e809'; } /* '' */
	.icon-ok:before { content: '\e80a'; } /* '' */
	.icon-cancel:before { content: '\e80b'; } /* '' */
	.icon-plus:before { content: '\e80c'; } /* '' */
	.icon-minus:before { content: '\e80d'; } /* '' */
	.icon-check:before { content: '\e80e'; } /* '' */
	.icon-lock-filled:before { content: '\e80f'; } /* '' */
	.icon-lock-open-filled:before { content: '\e810'; } /* '' */
	.icon-pin:before { content: '\e811'; } /* '' */
		
	span[lang="grc"] {
		font-family: $greek-font;
		letter-spacing: 1px;
	}

	&.editing {

		.btn-container {
			display: block !important;
		}
		span {
			&.selected {
				background-color: #FFCB7C !important; 
			}

			/* Unaligned, new link */
			&[data-tooltip]:after {
				content: '\e80c';
				color: #FFF;
				background-color: #5CB85C !important;
			}
			&:hover {
				color: #FFF;
				background-color: #5CB85C !important;
			}
		}
	}

	form {
		display: none;

		&.open {
			text-align: left;
			display: block;
			height: 120px;
		}

		label[for="token-option"] {
			display: block;
		}

		select {
			display: block;
		}

		textarea {
			box-sizing: border-box;
			width: 50%;
			float: left;
			min-height: 130px;
			font-size: 14px;
			line-height: 24px;
			margin-right: 10px;
		}
		label {
			margin: 5px;
		}
		input[type="radio"], input[type="checkbox"] {
			vertical-align: middle;
			margin-right: 5px;
		}
		button {
			border: 0;
			background-color: #4E6087;
			color: #FFF;
			padding: 5px 10px;
			font-size: 14px;
			cursor: pointer;
			margin: 5px;
			display: block;
		}
	}

	.header {
		display: block;
		background-color: #EEE;
		padding: 5px;
		overflow: auto;
		min-height: 45px;
		width: 100%;
		box-sizing: border-box;

		a {
			text-decoration: none;
		}
		.btn-container {
			text-align: center;
			display: none;
		}
		.btn {
			background-color: #333;
			color: #FFF;
			display: inline-block;
			padding: 5px;
			font-size: 12px;
			margin: 5px;
			line-height: 14px;
			border-radius: 2px;

			&:before {
				font-family: 'font';
				display: block;
				text-align: center;
			}
		}
		#btn-merge {
			&:before {
				content: '\e806';
			}
		}
		#btn-edit {
			&:before {
				content: '\e805';
			}
		}
		#btn-done {
			&:before {
				content: '\e800';
			}
		}
		#btn-add-translation {
			position: absolute;
			right: 10px;
		}
	}

	&.horizontal {
		.sentence {
			display: block !important;
			width: 100% !important;
			border-left: 1px dotted #EEE;
			border-bottom: 1px dotted #EEE;
			border-right: 1px dotted #EEE !important;
		}
	}

	.sentence {
		
		$left: 20px;

		vertical-align: top;
		display: inline-block;
		width: 25%;
		min-width: 200px;
		padding: $left;
		box-sizing: border-box;
		position: relative;
		line-height: 60px;

		&:first-child {
			border-left: 1px dotted #DDD;	
		}

		&:not(:last-child) {
			border-right: 1px dotted #DDD;
		}

		&:before {
			content: attr(lang);
			position: absolute;
			top: 0;
			left: 0;
			background-color: $bookmark-color;
			padding: 5px;
			line-height: 14px;
			font-size: 12px;
			color: #FEFEFE;
			height: 20px;
			width: 10px;
			text-align: center;
		}

		&:after {
			content: "";
			width: 0;
			height: 0;
			position: absolute;
			top: 25px;
			left: 0px;
			border-left: 10px solid transparent;
			border-right: 10px solid transparent;
			border-bottom: 5px solid #FFF;
		}

		&.rtl {
			direction: rtl;

			a {
				left: 5px;
				right: auto;
			}
		}

		/* Close button */
		a {
			display: inline-block;
			position: absolute;
			top: 0;
			right: 0;
			text-decoration: none;
			color: #FFF;
			background-color: #666;
			height: 10px;
			padding: 3px 5px;
			font-size: 12px;
			line-height: 10px;
			border-radius: 15px;
			margin: 10px;

			&:hover {
				background-color: #D15241;
			}
		}

		span {
			padding: 5px;

			&:hover {
				background-color: #F8D3A7;
				cursor: pointer;
			}

			&.hovered {
				background-color: #FCEBD6;
			}

			&.aligned {
				border-bottom: 2px solid #DDD; 
			}

			&.linked {

				background-color: #FADCB0;

				/* Already aligned, de-link*/
				&:hover {
					color: #FFF;
					background-color: #D15241 !important;
				}
				
				&[data-tooltip]:after {
					content: '\e80d';
					color: #FFF;
					background-color: #D15241 !important;
				}
			}
		}
	}


	span[data-tooltip] {
		position: relative;
		text-decoration: none;
	}
	span[data-tooltip]:after {
		font-family: 'font';
		direction: ltr;
		position: absolute;
		top: -25px;
		left: 50%;
		margin-left: -13px;
		padding: 0px 8px 0px 8px;
		-webkit-border-radius: 50px;
		-moz-border-radius   : 50px;
		border-radius        : 50px;
		white-space: nowrap;
		opacity: 0;
		font-size: 8px;
		height: 20px;
		width: 6px;
		line-height: 20px;
		/* At time of this creation, only Fx4 doing pseduo transitions */
		-webkit-transition: all 0.4s ease;
		-moz-transition   : all 0.4s ease;
	}
	span[data-tooltip]:hover:after {
		bottom: 100%;
	}
	span[data-tooltip]:hover:after, a[data-tooltip]:hover:before {
		opacity: 1;
	}
}

